user and question self links
